seeing f this solves overscroll on safari...

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  -webkit-overscroll-behavior: none;
   overscroll-behavior: none;
   text-align: center;
   font-family: 'Metal Mania';
